@@ -2,7 +2,7 @@ package me.pafias.pffa.commands.commands;
 
 import me.pafias.pffa.objects.User;
 import me.pafias.pffa.pFFA;
-import me.pafias.putils.CC;
+import me.pafias.putils.LCC;
 import org.bukkit.GameMode;
 import org.bukkit.Location;
 import org.bukkit.command.Command;
@@ -15,6 +15,7 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class SpectateCommand implements CommandExecutor, TabExecutor {
 
@@ -26,12 +27,17 @@ public class SpectateCommand implements CommandExecutor, TabExecutor {
 
     @Override
     public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        if (!(sender instanceof Player player)) {
-            sender.sendMessage(CC.t("&cOnly players."));
+        if (plugin.parseVersion() < 1.8) {
+            sender.sendMessage(LCC.t("&cYou cannot use this command as the spectator gamemode does not exist in this version."));
             return true;
         }
+        if (!(sender instanceof Player)) {
+            sender.sendMessage(LCC.t("&cOnly players."));
+            return true;
+        }
+        Player player = (Player) sender;
         if (plugin.getSM().getCombatLogManager().isInCombat(player)) {
-            sender.sendMessage(CC.t("&cYou cannot spectate while in combat."));
+            sender.sendMessage(LCC.t("&cYou cannot spectate while in combat."));
             return true;
         }
         final Player targetPlayer = args.length == 1 ? plugin.getServer().getPlayer(args[0]) : null;
@@ -57,7 +63,7 @@ public class SpectateCommand implements CommandExecutor, TabExecutor {
                     .filter(player -> ((Player) sender).canSee(player))
                     .map(Player::getName)
                     .filter(name -> name.toLowerCase().startsWith(args[0].toLowerCase()))
-                    .toList();
+                    .collect(Collectors.toList());
         return Collections.emptyList();
     }
 
